--- a/openstack-openstack/openstack-ubuntu/roles/keystone_population/handlers/main.yml
+++ b/openstack-openstack/openstack-ubuntu/roles/keystone_population/handlers/main.yml
@@ -1,5 +1,5 @@
-- name: restart keystone
-  service: name=keystone state=restarted
+- name: restart apache2
+  service: name=apache2 state=restarted
 
 - name: start keystone
   service: name=keystone state=started
